href to menu list

--- a/assets/css/colorlib.css
+++ b/assets/css/colorlib.css
@@ -7,7 +7,6 @@ body {
 }
 .header-area {
   background-color: white;
-
 }
 .baner-area {
   background-color: #f9f9ff;
@@ -20,17 +19,22 @@ body {
   width: 1140px;
   margin: 0 auto;
 }
-.menu-list li {
+.menu-list ul {
   list-style: none;
-  padding-left: 10px;
+  display: flex;
 }
-.menu-list {
+.menu-list-align {
   display: flex;
   flex-direction: row;
   text-transform: uppercase;
   font-weight: bold;
 }
-
+li{
+  padding-left: 5px;
+}
+li a{
+  text-decoration: none;
+}
 
 .container-baner {
   width: 1140px;
@@ -59,9 +63,14 @@ h6 {
   letter-spacing: 2px;
   font-size: 30px;
 }
-.baner-button{
-    box-sizing: border-box;
-    background-color: teal;
-    position: relative;
+.baner-button a {
+  box-sizing: border-box;
+  background-color: #8490ff;
+  position: relative;
+  text-decoration: none;
+  color: white;
+  padding: 10px;
+  text-transform: uppercase;
+  margin-top: 10px;
+  font-weight: bold;
 }
-
