--- a/assets/css/colorlib.css
+++ b/assets/css/colorlib.css
@@ -40,7 +40,7 @@ body {
 .menu-list ul ul.sub-menu {
   position: absolute;
   left: 0;
-  top: 0;
+  top: 100%;
   background: red;
   z-index: 99;
 }
