--- a/assets/css/05-26.css
+++ b/assets/css/05-26.css
@@ -8,9 +8,6 @@ body {
 .header-area {
   background-color: white;
 }
-.baner-area {
-  background-color: #f9f9ff;
-}
 .container-header {
   display: flex;
   flex-wrap: wrap;
@@ -20,6 +17,7 @@ body {
   width: 1140px;
   margin: 0 auto;
 }
+
 .menu-list ul {
   list-style: none;
   display: flex;
@@ -32,6 +30,7 @@ body {
 }
 .menu-list li {
   padding-left: 5px;
+  padding-right: 5px;
   position: relative;
 }
 .menu-list a {
@@ -50,35 +49,19 @@ ul .sub-menu {
   display: flex;
   flex-direction: column;
 }
-
-.container-baner {
-  width: 1140px;
-  margin: 0 auto;
-}
-.container-element {
+.baner-area {
+  background-image: url(https://preview.colorlib.com/theme/personal/img/blog/xblog-home-banner.jpg.pagespeed.ic.LNeIdTttnV.webp);
   box-sizing: border-box;
+  color: white;
+  margin: 0 auto;
+  background-position: center;
+  min-height: 500px;
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-}
-
-.baner-description .baner-img {
-  width: 50%;
-  padding: 10px;
-}
-h1,
-h6 {
-  text-transform: uppercase;
-  color: #222;
-}
-h1 {
-  font-size: 60px;
-}
-h6 {
-  font-weight: 400;
-  letter-spacing: 2px;
-  font-size: 30px;
-}
+  flex-direction: column;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  }
 .baner-button a {
   box-sizing: border-box;
   background-color: #8490ff;
