--- a/assets/css/05-26.css
+++ b/assets/css/05-26.css
@@ -1,54 +1,80 @@
 body {
   font-family: "Poppins", sans-serif;
   background-color: red;
-  margin-top: 0;
-  margin-left: -10px;
-  margin-right: -10px;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 1.625em;
+  position: relative;
 }
 .header-area {
   background-color: white;
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
 }
 .container-header {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  width: 1140px;
-  margin: 0 auto;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  width: 100%;
+  margin-right: auto;
+  margin-left: auto;
+}
+.logo-img {
+  box-sizing: border-box;
 }
 
-.menu-list ul {
-  list-style: none;
-  display: flex;
-  flex-direction: row;
+.menu-list a {
+  text-decoration: none;
+  color: #222;
   text-transform: uppercase;
+}
+.menu-list li {
+  display: inline-block;
+  text-transform: uppercase;
+}
+.menu-list a {
+  list-style: none;
+  padding-right: 8px;
+  font-size: 12px;
   font-weight: bold;
 }
 .menu-list a:hover {
-  color: red;
+  color: #8490ff;
 }
-.menu-list li {
-  padding-left: 5px;
-  padding-right: 5px;
-  position: relative;
-}
-.menu-list a {
-  text-decoration: none;
+.blog-active {
+  color: #8490ff;
 }
 
-.menu-list ul ul.sub-menu {
-  position: absolute;
-  left: 0;
-  top: 100%;
-  background: red;
-  z-index: 99;
-}
-ul .sub-menu {
-  flex-wrap: wrap;
+.header_row {
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
 }
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+.sub-menu {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+.sub-menu a {
+  display: block;
+}
+
+.dropdown:hover .sub-menu {
+  display: block;
+}
+
 .baner-area {
   background-image: url(https://preview.colorlib.com/theme/personal/img/blog/xblog-home-banner.jpg.pagespeed.ic.LNeIdTttnV.webp);
   box-sizing: border-box;
@@ -61,7 +87,7 @@ ul .sub-menu {
   align-items: center;
   display: flex;
   justify-content: center;
-  }
+}
 .baner-button a {
   box-sizing: border-box;
   background-color: #8490ff;
