--- a/assets/css/05-26.css
+++ b/assets/css/05-26.css
@@ -1,31 +1,47 @@
+* {
+  box-sizing: border-box;
+}
 body {
   font-family: "Poppins", sans-serif;
-  background-color: red;
+  background-color: #fff;
   font-size: 14px;
   font-weight: 300;
   line-height: 1.625em;
   position: relative;
+  margin-left: -1px;
+  margin-right: -1px;
 }
+/* Meniu start */
+/* header sekcijos nustatymia */
 .header-area {
-  background-color: white;
   position: fixed;
   left: 0;
   top: 0;
   right: 0;
+  z-index: 10;
 }
+/* header container nustatymai */
 .container-header {
   padding-left: 15px;
   padding-right: 15px;
-  padding-top: 20px;
-  padding-bottom: 20px;
   width: 100%;
-  margin-right: auto;
-  margin-left: auto;
+  margin-right: 20px;
+  margin-left: 20px;
 }
+/* meniu eilutės aprašymas */
+.header-row {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  padding-right: 80px;
+  padding-left: 80px;
+}
+/* logotipas */
 .logo-img {
   box-sizing: border-box;
 }
-
+/* matoma navigacija */
 .menu-list a {
   text-decoration: none;
   color: #222;
@@ -33,40 +49,36 @@ body {
 }
 .menu-list li {
   display: inline-block;
-  text-transform: uppercase;
 }
 .menu-list a {
   list-style: none;
   padding-right: 8px;
+  padding-left: 8px;
   font-size: 12px;
   font-weight: bold;
 }
+/* pseudo komanda - užvedus užsisdeda spalva  */
 .menu-list a:hover {
   color: #8490ff;
 }
+/* uždeda spalvą visada, kol kas nustatom rankiniu būdu */
 .blog-active {
   color: #8490ff;
 }
-
-.header_row {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-between;
-}
-
+/* dropdown menu */
 .dropdown {
   position: relative;
   display: inline-block;
 }
+/* 2 lygio meniu */
 .sub-menu {
   display: none;
   position: absolute;
   background-color: #f9f9f9;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
 }
+/* pasiaiškinti kokia jo tiksli reikšmė  */
 .sub-menu a {
   display: block;
 }
@@ -74,28 +86,72 @@ body {
 .dropdown:hover .sub-menu {
   display: block;
 }
-
-.baner-area {
-  background-image: url(https://preview.colorlib.com/theme/personal/img/blog/xblog-home-banner.jpg.pagespeed.ic.LNeIdTttnV.webp);
-  box-sizing: border-box;
-  color: white;
-  margin: 0 auto;
-  background-position: center;
-  min-height: 500px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  display: flex;
-  justify-content: center;
+.sub-menu:hover .sub-sub-menu {
+  display: block;
 }
-.baner-button a {
-  box-sizing: border-box;
-  background-color: #8490ff;
+.sub-sub-menu a {
+  display: block;
+  z-index: 10;
+}
+.sub-sub-menu {
+  display: block;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 10;
+}
+/* baner start */
+.baner-area{
+  position: absolute;
+  display: block;
+  top: 35px;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+.baner-container {
+  width: 100%;
+
+}
+.background-img {
   position: relative;
-  text-decoration: none;
-  color: white;
-  padding: 10px;
-  text-transform: uppercase;
-  margin-top: 10px;
-  font-weight: bold;
+  box-sizing: border-box;
+  background-image: url(https://preview.colorlib.com/theme/personal/img/blog/xblog-home-banner.jpg.pagespeed.ic.LNeIdTttnV.webp);
+  background-size: cover;
+  min-height: 500px;
+  z-index: 1;
+}
+.background-overlay{
+  position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 2;
+
+}
+.baner-content{
+color: white;
+align-items: center;
+display: flex;
+flex-direction: column;
+position: relative;
+top: 200px;
+}
+.baner-button a{
+box-sizing: border-box;
+text-decoration: none;
+background:#8490ff ;
+border-radius: 5px;
+color: white;
+padding: 7px;
+text-transform: uppercase;
+font-weight: bold;
+}
+/* baner end */
+/* top category start */
+.top-category-area{
+ 
 }
