--- a/assets/css/05-26.css
+++ b/assets/css/05-26.css
@@ -19,6 +19,7 @@ body {
   top: 0;
   right: 0;
   z-index: 10;
+  background: white;
 }
 /* header container nustatymai */
 .container-header {
@@ -103,7 +104,7 @@ body {
 }
 /* baner start */
 .baner-area {
-  position: absolute;
+  position: relative;
   display: block;
   top: 35px;
   left: 0;
@@ -158,7 +159,6 @@ body {
   flex-wrap: wrap;
   justify-content: space-around;
   position: relative;
-  top: 600px;
 }
 
 .widget-card {
@@ -219,4 +219,34 @@ body {
 .text-on__widget-card a {
   color: white;
   text-decoration: none;
+}
+
+.post-content-area {
+  box-sizing: border-box;
+}
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -15px;
+  margin-right: -15px;
+}
+.left-col {
+  position: relative;
+flex: 0 0 66%;
+  min-height: 1px;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+.single-post-row{
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: row;
+}
+.col-details{
+  position: relative;
+
+}
+.img-with-description{
+  position: relative;
+  
 }
