--- a/assets/css/05-26.css
+++ b/assets/css/05-26.css
@@ -220,33 +220,107 @@ body {
   color: white;
   text-decoration: none;
 }
+.bottom-container{
+  width: 100%;
+  margin-left: 70px;
+  margin-right: 70px;
 
-.post-content-area {
-  box-sizing: border-box;
-}
-.row {
-  display: flex;
-  flex-wrap: wrap;
-  margin-left: -15px;
-  margin-right: -15px;
-}
-.left-col {
-  position: relative;
-flex: 0 0 66%;
-  min-height: 1px;
-  padding-right: 15px;
-  padding-left: 15px;
 }
 .single-post-row{
   display: flex;
   flex-wrap: nowrap;
-  flex-direction: row;
+  max-width: 100%;
 }
 .col-details{
-  position: relative;
+  display: flex;
+  flex-wrap: nowrap;
+  max-width: 70%;
+}
+.left-center{
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: row;
+}
+.left-area{
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: column;
+  padding-right: 15px;
+  padding-left: 15px;
+  text-align: right;width: 100%;
 
 }
-.img-with-description{
-  position: relative;
-  
+.tags ul{
+  display: inline-block;
+  list-style: none;
 }
+.tags li{
+  display: inline-block;
+  list-style: none;
+
+}
+
+.tags{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+.tags a{
+  padding-right: 5px;
+
+}
+.post-content-area a{
+  text-decoration: none;
+}
+.primary-btn {
+  box-sizing: border-box;
+  text-decoration: none;
+  background: #8490ff;
+  border-radius: 5px;
+  color: white;
+  padding: 7px;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+.img-feature img{
+  max-width: 600px;
+}
+.right-area{
+max-width: 33%;
+justify-content: center;
+display: flex;
+flex-wrap: wrap;
+flex-direction: column;
+padding-left: 50px;
+
+}
+.right-area all{
+
+  justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  
+  }
+  .social-link {
+    list-style: none;
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+  }
+  .social-link i{
+    align-items: center;
+    padding-left: 5px;
+    padding-right: 5px;
+    font-size: 14px;
+
+  }
+  .img-with-description{
+    width: 100%;
+  }
+  .cards{
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+  }
