--- a/assets/css/05-26.css
+++ b/assets/css/05-26.css
@@ -228,26 +228,29 @@ body {
 }
 .single-post-row{
   display: flex;
-  flex-wrap: nowrap;
+/*   flex-wrap: nowrap; */
   max-width: 100%;
 }
 .col-details{
   display: flex;
-  flex-wrap: nowrap;
+/*   flex-wrap: nowrap; */
   max-width: 70%;
 }
 .left-center{
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
+  width: 100%;
+  flex-wrap: wrap;
+/*   flex-wrap: nowrap; */
+/*   flex-direction: row; */
 }
 .left-area{
   display: flex;
-  flex-wrap: nowrap;
+/*   flex-wrap: nowrap; */
   flex-direction: column;
   padding-right: 15px;
   padding-left: 15px;
-  text-align: right;width: 100%;
+  text-align: right;
+  width: 100%;
 
 }
 .tags ul{
@@ -321,6 +324,6 @@ padding-left: 50px;
   }
   .cards{
     display: flex;
-    flex-wrap: nowrap;
-    flex-direction: row;
+/*     flex-wrap: nowrap; */
+/*     flex-direction: row; */
   }
